Non repudiation added

--- a/public/templates/pages/blind.html
+++ b/public/templates/pages/blind.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2>RSA MODULE</h2>
+    <h2>Blind message</h2>
     <p>Introduce the message</p>
     <form>
         <div class="form-group">
