All modules working as expected

--- a/public/templates/pages/paillier.html
+++ b/public/templates/pages/paillier.html
@@ -4,6 +4,9 @@
     <form>
         <div class="form-group">
 
+
+            <textarea placeholder="num1" ng-model="num1"></textarea>
+            <textarea placeholder="num2" ng-model="num2"></textarea>
             <button ng-click="paillier()">Click to send a vote</button>
         </div>
 
